<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/setting_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/setting_video_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_video_size" />

            <RadioButton
                android:id="@+id/setting_default_size_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/settings_default_size" />

            <RadioButton
                android:id="@+id/setting_big_size_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_big_size" />

            <RadioButton
                android:id="@+id/setting_huge_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_huge_size" />

            <RadioButton
                android:id="@+id/setting_custom_size_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_custom_size" />

            <EditText
                android:id="@+id/setting_custom_size_video_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/settings_custom_size_hint"
                android:inputType="numberSigned"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

        </RadioGroup>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>