<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_completed">


    <fragment
        android:id="@+id/navigation_completed"
        android:name="com.example.myapplication.ui.completed.CompletedFragment"
        android:label="@string/title_completed"
        tools:layout="@layout/fragment_completed" />

    <fragment
        android:id="@+id/navigation_compressing"
        android:name="com.example.myapplication.ui.compressing.CompressingFragment"
        android:label="@string/title_compressing"
        tools:layout="@layout/fragment_compressing" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.myapplication.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>